# gemini

./: .gitignore  Cargo.toml  README.md  log4rs.yaml
.cargo/: config.toml
src/: diff.rs  lib.rs  macro.rs  main.rs
src/action/: click.rs  cursor.rs  hover.rs  mod.rs  scroll.rs  zoom.rs
src/render/: mod.rs  pixels_backend.rs  pre.rs
src/ui/: button.rs  canvas.rs  color.rs  dom.rs  layout.rs  mod.rs  state.rs  style.rs  sync.rs  tab.rs  text.rs
src/ui/action/: hover.rs
src/ui/widget/: button.rs  canvas.rs  cell.rs  container.rs  heading.rs  label.rs  mod.rs  scrollbar.rs
