[package]
name = "gemini"
version = "0.1.0"
edition = "2021"

[lib]
name = "gemini"
path = "src/lib.rs"

[[bin]]
name = "demo_app"
path = "src/main.rs"

[dependencies]
winit = { version = "0.29.9", default-features = false, features = ["x11","rwh_05"] }
pixels = "0.13.0"
log = "0.4.27"
log4rs = "1.3.0"
tiny-skia = "0.11.4"
ab_glyph = "0.2.29"
dyn-clone = "1.0.19"
rand = "0.8"
thiserror = "2.0.12"
